ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_19.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--peter-celestine--pope-and-confessor\", \"st--peter-celestine\"]"
expression: s.0
---
2025-05-19
Vespers of St. Peter Celestine, Pope and Confessor:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
