ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_20.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--bernardine-of-siena--confessor\", \"st--bernardine-of-siena\"]"
expression: s.0
---
2025-05-20
Vespers of St. Bernardine of Siena, Confessor:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
