ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_21.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-iv-week-v-of-eastertide\", \"feria-of-eastertide\"]"
expression: s.0
---
2025-05-21
Vespers of Feria IV week V of Eastertide:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Psalter (Ordinary of Eastertide)
  Hymn:        Psalter (Ordinary of Eastertide)
  Verse:       Psalter (Ordinary of Eastertide)
  Magnificat:  Psalter (Ordinary of Eastertide)
  Collect:     of Sunday
