ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_25.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-v-after-easter-sunday\", \"dominica-of-eastertide\"]"
expression: s.0
---
2025-05-25
Second Vespers of Dominica V after Easter Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
